fix font flicker

--- a/src/templates/blog-post/styles.sass
+++ b/src/templates/blog-post/styles.sass
@@ -54,6 +54,7 @@
       margin-top: 20px
       font-size: 18px
     img
+      height: auto
       display: block
       margin: auto
       max-width: 500px
